# crafted-interpreter

./: .gitignore  test.ml
lox_interpreter/: dune-project  lox_interpreter.opam
lox_interpreter/_build/: .db  .digest-db  log
lox_interpreter/_build/default/: lox_interpreter.dune-package  lox_interpreter.install
lox_interpreter/_build/default/.dune/: configurator  configurator.v2
lox_interpreter/_build/default/lib/: lox_interpreter.cma  lox_interpreter.cmxa  lox_interpreter.cmxs
lox_interpreter/_build/default/lib/.lox_interpreter.objs/byte/: lox_interpreter.cmi  lox_interpreter.cmo  lox_interpreter.cmt
lox_interpreter/_build/default/lib/.lox_interpreter.objs/native/: lox_interpreter.cmx
lox_interpreter/_build/default/lib/.merlin-conf/: lib-lox_interpreter
lox_interpreter/_build/default/test/.lox_interpreter.eobjs/byte/: dune__exe__Lox_interpreter.cmi  dune__exe__Lox_interpreter.cmti
lox_interpreter/_build/default/test/.lox_interpreter.eobjs/native/: dune__exe__Lox_interpreter.cmx
lox_interpreter/_build/default/test/.merlin-conf/: exe-lox_interpreter
lox_interpreter/_build/install/default/lib/lox_interpreter/: META  dune-package  opam
lox_interpreter/lib/: dune
lox_interpreter/lox/: ast.ml  dune  eval.ml  lox.ml  parser.ml  scanner.ml  token.ml
lox_interpreter/test/: dune
